Fixed a bug on long independant vowels.

--- a/scim/trans/configure.ac
+++ b/scim/trans/configure.ac
@@ -1,10 +1,6 @@
 AC_INIT(scim-sinhala-trans, 0.2.0, sinhala@linux.lk)
 AC_CONFIG_SRCDIR([configure.ac])
 
-# Save this value here, since automake will set cflags and cxxflags later
-dnl cflags_set=${CFLAGS+set}
-dnl cppflags_set=${CPPFLAGS+set}
-
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(config.h)
 
@@ -23,73 +19,47 @@ AC_TYPE_SIZE_T
 SCIM_VERSION=0.99.8
 
 PKG_CHECK_MODULES(SCIM,[scim >= $SCIM_VERSION])
-
-# Check if we should build setup module
-PKG_CHECK_MODULES(SCIM_GTKUTILS,[scim-gtkutils >= $SCIM_VERSION],
-		  		[SCIM_HAS_GTKUTILS=yes],
-				[SCIM_HAS_GTKUTILS=no])
-
 AC_SUBST(SCIM_VERSION)
-
-AM_CONDITIONAL(SCIM_BUILD_SETUP, [test "$SCIM_HAS_GTKUTILS" = "yes"])
-
-if test "$SCIM_HAS_GTKUTILS" = "yes"; then
-  SCIM_BUILD_SETUP=1
-else
-  SCIM_BUILD_SETUP=0
-fi
-
-AC_SUBST(SCIM_BUILD_SETUP)
 
 # Checks for header files.
 AC_HEADER_STDC
 AC_FUNC_ALLOCA
-AC_CHECK_HEADERS([argz.h fcntl.h float.h inttypes.h langinfo.h libintl.h limits.h locale.h malloc.h stddef.h stdint.h stdio_ext.h stdlib.h string.h strings.h sys/param.h unistd.h wchar.h])
-
-# Checks for library functions.
-dnl AC_SUBST(ac_aux_dir)
+dnl AC_CHECK_HEADERS([argz.h fcntl.h langinfo.h libintl.h limits.h locale.h malloc.h stddef.h stdio_ext.h sys/param.h wchar.h])
 
 # libtool option to control which symbols are exported
 # right now, symbols starting with _ are not exported
 LIBTOOL_EXPORT_OPTIONS='-export-symbols-regex "^[[^_]].*"'
 
 # Extra args.
-AC_ARG_ENABLE(debug,
-	      [  --enable-debug     Turn on debugging],
-	      [case "${enableval}" in
-	       yes) debug=yes ;;
-	       no)  debug=no ;;
-	       *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
-       	      esac],[debug=no])
-
-if test "x$debug" = "xyes"; then
-  test "$cflags_set" = set || CFLAGS="$CFLAGS -g"
-  test "$cppflags_set" = set || CPPFLAGS="$CXXFLAGS -g"
-  SCIM_DEBUG_FLAGS="-DENABLE_DEBUG=1"
-else
-  SCIM_DEBUG_FLAGS=""
-fi
-AC_SUBST(SCIM_DEBUG_FLAGS)
+AC_ARG_ENABLE(debug, [  --enable-debug     Turn on debugging],
+	[case "${enableval}" in
+		yes) debug=yes ;;
+		 no) debug=no ;;
+		  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
+	esac], [debug=no])
 
 SCIM_ICONDIR=`$PKG_CONFIG --variable=icondir scim`
 SCIM_MODULEDIR=`$PKG_CONFIG --variable=moduledir scim`
 
-if test "x$SCIM_ICONDIR" = "x"; then
-  SCIM_ICONDIR=${datadir}/scim/icons
+if test "x$SCIM_ICONDIR" = "x"
+then
+	SCIM_ICONDIR=${datadir}/scim/icons
 fi
 
-if test "x$SCIM_MODULEDIR" = "x"; then
-  SCIM_MODULEDIR=${libdir}/scim-1.0
+if test "x$SCIM_MODULEDIR" = "x"
+then
+	SCIM_MODULEDIR=${libdir}/scim-1.0
 fi
 
 AC_SUBST(SCIM_ICONDIR)
 AC_SUBST(SCIM_MODULEDIR)
         
 AC_CONFIG_FILES([
-Makefile
-src/Makefile
-data/Makefile
-debian/Makefile
+	Makefile
+	src/Makefile
+	data/Makefile
+	debian/Makefile
 ])
 
 AC_OUTPUT
+
