--- a/scim/trans/src/Makefile.am
+++ b/scim/trans/src/Makefile.am
@@ -21,11 +21,12 @@ sinhala_la_SOURCES = \
 	scim_sinhala_imengine_factory.cpp \
 	scim_sinhala_imengine.cpp
 
-sinhala_la_CFLAGS = @SCIM_CFLAGS@ @SCIM_DEBUG_FLAGS@ -I/usr/include/scim-1.0/
-sinhala_la_CXXFLAGS = @SCIM_CFLAGS@ @SCIM_DEBUG_FLAGS@ -I/usr/include/scim-1.0/
+sinhala_la_CFLAGS = @SCIM_CFLAGS@ -I/usr/include/scim-1.0/
+sinhala_la_CXXFLAGS = @SCIM_CFLAGS@ -I/usr/include/scim-1.0/
 
 sinhala_la_LDFLAGS = \
 	-avoid-version \
 	-rpath $(moduledir) \
 	-module \
 	@SCIM_LIBS@
+
