--- a/debian/debian/control
+++ b/debian/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.6.2
 
 Package: sinhala-gnu-linux
 Architecture: all
-Depends: firefox (>= 1.5), libskim0, scim, scim-sinhala-trans, sinhala-font-lklug, sinhala-locale-glibc, skim
+Depends: firefox (>= 1.5), libskim0, scim, scim-gtk2-immodule, scim-sinhala-trans, sinhala-font-lklug, sinhala-locale-glibc, skim
 Description: Dummy package to install all the packages to add Sinhala
  support for GNU/Linux.
