--- a/debian/debian/control
+++ b/debian/debian/control
@@ -7,6 +7,5 @@ Standards-Version: 3.6.2
 
 Package: sinhala-gnu-linux
 Architecture: all
-Depends: firefox (>= 1.5), libskim0, scim, scim-gtk2-immodule, scim-sinhala-trans, sinhala-font-lklug, sinhala-locale-glibc, skim
-Description: Dummy package to install all the packages to add Sinhala
- support for GNU/Linux.
+Depends: firefox (>= 1.5), libskim0, scim, scim-gtk2-immodule, scim-sinhala-trans, sinhala-font-lklug, glibc (>= 2.3.6) | sinhala-locale-glibc, skim
+Description: Dummy package to install all Sinhala language packages
