--- a/fonts/debian/control
+++ b/fonts/debian/control
@@ -2,6 +2,7 @@ Source: sinhala-font-lklug
 Section: sinhala
 Priority: optional
 Maintainer: Anuradha Ratnaweera <anuradha@taprobane.org>
+Uploaders: Harshula Jayasuriya <harshula@gmail.com>
 Build-Depends: debhelper (>> 3.0.0), defoma (>= 0.7.0)
 Standards-Version: 3.6.2
 
