--- a/scim/trans/debian/control
+++ b/scim/trans/debian/control
@@ -2,6 +2,7 @@ Source: scim-sinhala-trans
 Section: utils
 Priority: optional
 Maintainer: Anuradha Ratnaweera <anuradha@taprobane.org>
+Uploaders: Harshula Jayasuriya <harshula@gmail.com>
 Build-Depends: debhelper (>= 4.0.0), scim (>= 1.3.0), scim-dev (>= 1.3.0), libgtk2.0-dev, autotools-dev
 Standards-Version: 3.6.2
 
