Need fontforge to convert the SFD file to TTF before packaging

--- a/fonts/debian/control
+++ b/fonts/debian/control
@@ -3,7 +3,7 @@ Section: sinhala
 Priority: optional
 Maintainer: Anuradha Ratnaweera <anuradha@taprobane.org>
 Uploaders: Harshula Jayasuriya <harshula@gmail.com>
-Build-Depends: debhelper (>> 3.0.0), defoma (>= 0.7.0)
+Build-Depends: debhelper (>> 3.0.0), defoma (>= 0.7.0), fontforge
 Standards-Version: 3.6.2
 
 Package: sinhala-font-lklug
