--- a/scim/wijesekera/Makefile.am
+++ b/scim/wijesekera/Makefile.am
@@ -1,5 +1,9 @@
-SUBDIRS = intl po m4 intl po m4  src data
+SUBDIRS = intl po src data
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath
+EXTRA_DIST = config.rpath m4/ChangeLog
+
+localedir = $(datadir)/locale
+AM_CPPFLAGS = -I../intl -I$(top_srcdir)/intl -DLOCALEDIR=\"$(localedir)\"
+LDADD = @LIBINTL@
