--- a/scim/wijesekera/configure.ac
+++ b/scim/wijesekera/configure.ac
@@ -1,14 +1,17 @@
+#                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
-AC_INIT(scim-imengine-wijesekera, 0.2.2, nidujay *killspam* gmail dot com)
-AC_CONFIG_SRCDIR([configure.ac])
+
+AC_PREREQ(2.61)
+AC_INIT([scim-wijesekera],[0.3.3],[nidujay *killspam* gmail dot com])
+AC_CONFIG_SRCDIR([src/scim_wijesekera_prefs.h])
 
 # Save this value here, since automake will set cflags and cxxflags later
 cflags_set=${CFLAGS+set}
 cppflags_set=${CPPFLAGS+set}
 
 SCIM_WIJESEKERA_MAJOR_VERSION=0
-SCIM_WIJESEKERA_MINOR_VERSION=2
-SCIM_WIJESEKERA_MICRO_VERSION=2
+SCIM_WIJESEKERA_MINOR_VERSION=3
+SCIM_WIJESEKERA_MICRO_VERSION=3
 
 SCIM_WIJESEKERA_VERSION=$SCIM_WIJESEKERA_MAJOR_VERSION.$SCIM_WIJESEKERA_MINOR_VERSION.$SCIM_WIJESEKERA_MICRO_VERSION
 
@@ -17,9 +20,18 @@ AC_SUBST(SCIM_WIJESEKERA_MINOR_VERSION)
 AC_SUBST(SCIM_WIJESEKERA_MICRO_VERSION)
 AC_SUBST(SCIM_WIJESEKERA_VERSION)
 
+# Checks for programs.
+AC_PROG_CXX
+AC_PROG_CC
+AC_GNU_SOURCE
+AC_LANG(C++)
+AC_PROG_INSTALL
+AC_PROG_MAKE_SET
+
 # Init automake stuff
-AM_INIT_AUTOMAKE
-AM_CONFIG_HEADER(config.h)
+AM_INIT_AUTOMAKE(scim-wijesekera, SCIM_WIJESEKERA_VERSION)
+AM_CONFIG_HEADER([config.h])
+AM_GNU_GETTEXT
 
 # Init gettext
 ALL_LINGUAS="si"
@@ -35,16 +47,7 @@ AC_PROG_LIBTOOL
 AC_LIB_LTDL
 AC_SUBST(LIBTOOL_DEPS)
 
-# Checks for programs.
-AC_PROG_CXX
-AC_PROG_CC
-AC_LANG(C++)
-
-AC_C_CONST
-AC_TYPE_SIZE_T
-
 # Checks for libraries.
-
 SCIM_VERSION=0.99.8
 
 PKG_CHECK_MODULES(SCIM,[scim >= $SCIM_VERSION])
@@ -69,15 +72,22 @@ AC_SUBST(SCIM_BUILD_SETUP)
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_FUNC_ALLOCA
-AC_CHECK_HEADERS([argz.h fcntl.h float.h inttypes.h langinfo.h libintl.h limits.h locale.h malloc.h stddef.h stdint.h stdio_ext.h stdlib.h string.h strings.h sys/param.h unistd.h wchar.h])
+AC_HEADER_SYS_WAIT
+AC_CHECK_HEADERS([libintl.h stdlib.h string.h unistd.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_HEADER_STDBOOL
+AC_C_CONST
+AC_TYPE_UINT8_T
 
 # Checks for library functions.
+AC_CHECK_FUNCS([memset])
 AC_SUBST(ac_aux_dir)
 
 # libtool option to control which symbols are exported
 # right now, symbols starting with _ are not exported
 LIBTOOL_EXPORT_OPTIONS='-export-symbols-regex "^[[^_]].*"'
+AC_SUBST(LIBTOOL_EXPORT_OPTIONS)
 
 # Extra args.
 AC_ARG_ENABLE(debug,
@@ -110,11 +120,8 @@ fi
 
 AC_SUBST(SCIM_ICONDIR)
 AC_SUBST(SCIM_MODULEDIR)
-        
-AC_CONFIG_FILES([ intl/Makefile po/Makefile.in m4/Makefile
-Makefile
-src/Makefile
-data/Makefile
-])
 
+AC_CONFIG_FILES([Makefile intl/Makefile po/Makefile.in
+                 data/Makefile
+                 src/Makefile])
 AC_OUTPUT
