Include PDF in dist, better cleanup of doc.

--- a/scim/sayura/doc/Makefile.am
+++ b/scim/sayura/doc/Makefile.am
@@ -1,6 +1,6 @@
 TEX= sayura
 
-EXTRA_DIST = index.html sayura.tex sinhala.sty style.css
+EXTRA_DIST = index.html sayura.tex sayura.pdf sinhala.sty style.css
 
 pdf: $(TEX).pdf
 
@@ -11,4 +11,11 @@ $(TEX).pdf: $(TEX).tex
 	xelatex $(TEX).tex
 
 clean:
-	rm -f $(TEX).pdf $(TEX).log $(TEX).aux $(TEX).toc *~ sayura.synctex.gz
+	rm -f $(TEX).log $(TEX).aux $(TEX).toc *~ sayura.synctex.gz
+
+distclean: clean
+
+maintainer-clean: distclean
+	rm -f $(TEX).pdf
+	rm -f Makefile
+
