--- a/fonts/debian/rules
+++ b/fonts/debian/rules
@@ -2,6 +2,9 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 
+build/ttf-sinhala-lklug::
+	$(MAKE)
+
 binary-install/ttf-sinhala-lklug::
 	dh_install
 	dh_installdefoma
