--- a/fonts/debian/control
+++ b/fonts/debian/control
@@ -2,10 +2,11 @@ Source: ttf-sinhala-lklug
 Section: x11
 Priority: optional
 Maintainer: Anuradha Ratnaweera <anuradha@taprobane.org>
-Uploaders: Anuradha Weeraman <aweeraman@gmail.com>
-Build-Depends: debhelper (>= 4.1.0), cdbs (>= 0.4.23)
+Uploaders: Anuradha Weeraman <anuradha@gnuromancer.org>
+Build-Depends: debhelper (>= 4.1.0)
 Build-Depends-Indep: defoma (>= 0.7.0), fontforge (>= 0.0.20080330)
 Standards-Version: 3.7.3
+Homepage: http://www.lug.lk
 
 Package: ttf-sinhala-lklug
 Architecture: all
@@ -15,3 +16,5 @@ Conflicts: sinhala-font-lklug
 Replaces: sinhala-font-lklug
 Provides: sinhala-font-lklug
 Description: Unicode Sinhala font by Lanka Linux User Group
+ This package provides the Unicode Sinhala font developed by
+ the Lanka Linux User Group (LKLUG)
