--- a/fonts/debian/rules
+++ b/fonts/debian/rules
@@ -28,20 +28,20 @@ install: build
 	dh_installdirs
 
 binary-indep: build install
+
+binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installdocs
-	dh_installchangelogs
 	dh_install
 	dh_installdefoma
+	dh_strip
 	dh_compress
 	dh_fixperms
 	dh_installdeb
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
-
-binary-arch:
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install patch unpatch
