--- a/fonts/debian/control
+++ b/fonts/debian/control
@@ -6,7 +6,7 @@ Uploaders: Anuradha Weeraman <anuradha@gnuromancer.org>
 Build-Depends: debhelper (>= 4.1.0)
 Build-Depends-Indep: defoma (>= 0.7.0), fontforge (>= 0.0.20080330)
 Standards-Version: 3.7.3
-Homepage: http://www.lug.lk
+Homepage: http://www.lug.lk/fonts/lklug
 
 Package: ttf-sinhala-lklug
 Architecture: all
