--- a/scim/wijesekera/debian/control
+++ b/scim/wijesekera/debian/control
@@ -2,7 +2,7 @@ Source: scim-wijesekera
 Section: utils
 Priority: optional
 Maintainer: Dushara Jayasinghe (pkgdev) <nidujay@gmail.com>
-Build-Depends: debhelper (>= 5), scim (>= 1.3.0), libscim-dev (>= 1.3.0), libgtk2.0-dev, autotools-dev, autoconf, libtool, libltdl3-dev
+Build-Depends: debhelper (>= 5), scim (>= 1.3.0), libscim-dev (>= 1.3.0), libgtk2.0-dev, autotools-dev
 Standards-Version: 3.7.3
 
 Package: scim-wijesekera
